vlib/v/parser/tests/array_decl_type_struct_field_err.vv

struct Config {
mut:
	max_size          string
	filter_until_hour int   = 240 // 10 days
	prune_list        array = ['all']
	time_interval     int   = 300 // 5 min
}
